--- a/task3/UI/css/styles.css
+++ b/task3/UI/css/styles.css
@@ -58,7 +58,6 @@
 }
 
 
-
 .section__filter {
     display: flex;
     position: fixed;
@@ -105,7 +104,7 @@
     margin: 5px;
 }
 
-.supplier__filter {
+.vendor__filter {
     display: flex;
     justify-content: center;
     flex-flow: column;
@@ -113,11 +112,6 @@
     padding: 0;
     margin: 5px;
 }
-
-.search__button {
-}
-
-
 
 .section__data {
     display: flex;
@@ -137,12 +131,13 @@
     flex-wrap: wrap;
     text-align: center;
     border: black solid;
+    border-radius: 15px;
     background-color: #f5f3e8;
 }
 
 .post__info {
     display: flex;
-    flex: 0 1 100%;
+    flex: 0 0 100%;
 }
 
 .post__info__section {
@@ -156,17 +151,19 @@
 
 .post__text {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-flow: column;
     align-items: center;
     align-content: center;
     padding: 0;
     flex: 0 1 60%;
 }
-.service__name{
+
+.service__name {
     background: #e9e8d4;
     margin: 5%;
 }
+
 .grade {
     background-color: #e9e8d4;
 }
@@ -180,35 +177,81 @@
     margin: 5px;
     background: #eaddc4;
 }
-.description{
-    background: #e9e8d4;
+.validity__info__text{
+    flex: 1 1 10%;
 }
+
+.description {
+    flex: 0 0 50%;
+    background: #e9e8d4;
+    min-width: 100%;
+    min-height: 50%;
+}
+
 .post__info__hashtags {
     display: flex;
+    justify-content: space-between;
     flex: 0 0 auto;
-    justify-content: space-around;
-    width: 80%;
+    width: 100%;
 }
 
-.hashtag{
+.post__info__hashtags button {
+    display: flex;
+    flex: 0 0 auto;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    padding: 0;
+    margin: 0;
+    width: 25px;
+    height: 25px;
+}
+
+.hashtag {
     width: 60%;
     background: #d9cec0;
+    border-radius: 10px;
 
 }
-.sale{
+
+.sale {
     width: 20%;
-    background: #bc9b74;
+    background: #e9d2b5;
+    border-radius: 5px;
 }
+
 .grade img {
     width: 25px;
     height: 25px;
 }
 
-.review{
+.like {
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    padding: 0;
+    margin: 0;
+    width: 25px;
+    height: 25px;
+}
+
+
+.comments {
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    padding: 0;
+    margin: 0;
+    width: 25px;
+    height: 25px;
+}
+
+.review {
     display: flex;
     justify-content: center;
 }
-.review button{
+
+.review button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -217,26 +260,47 @@
     height: 50%;
 
 }
-.navigation{
+
+.navigation {
     display: flex;
     align-content: center;
     justify-content: center;
     width: 85%;
     margin-bottom: 10%;
 }
-.previous__page img {
-    width: 25px;
-    height: 25px;
-}
-.page{
+
+.page {
     width: 25px;
     height: 25px;
     text-align: center;
+    justify-content: center;
     line-height: 25px;
 }
-.next__page img {
-    width: 25px;
-    height: 25px;
+
+.navigation__page__next {
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    background-image: url("../img/next.png");
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    align-content: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+}
+
+.navigation__page__prev {
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    background-image: url("../img/previous.png");
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    align-content: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
 }
 
 .footer {
