--- a/task3/UI/css/styles.css
+++ b/task3/UI/css/styles.css
@@ -177,7 +177,8 @@
     margin: 5px;
     background: #eaddc4;
 }
-.validity__info__text{
+
+.validity__info__text {
     flex: 1 1 10%;
 }
 
@@ -191,6 +192,7 @@
 .post__info__hashtags {
     display: flex;
     justify-content: space-between;
+    align-content: center;
     flex: 0 0 auto;
     width: 100%;
 }
