--- a/task3/UI/css/styles.css
+++ b/task3/UI/css/styles.css
@@ -1,125 +1,6 @@
-.header {
-    position: fixed;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex: 0 1 auto;
-    flex-grow: 1;
-    padding: 1%;
-    left: 0;
-    top: 0;
-    background: #6e7c44;
-}
-
-.header__site__name {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: large;
-    flex: 0 1 auto;
-    padding: 0;
-    margin: 0 2% 0 0;
-}
-
-.site__name {
-    top: 15px;
-    font-size: 120%;
-    font-family: Ravie, serif;
-}
-
-.header__user__info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: large;
-    flex: 0 1 auto;
-    padding: 0;
-    margin: 0 2% 0 0;
-}
-
-.user__img img {
-    width: 70px;
-    height: 70px;
-}
-
-.user__info {
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    padding: 0;
-    margin: 5px;
-}
-
-.type-authorization {
-    font-family: Candara, serif;
-}
-
-
-
-.section__filter {
-    display: flex;
-    position: fixed;
-    align-self: end;
-    padding: 10% 20px 20px 20px;
-    top: 0;
-    right: 0;
-    z-index: -2;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    justify-content: normal;
-    flex: 1 1 auto;
-    flex-grow: 1;
-    max-width: 40%;
-    min-height: 100%;
-    background-color: #798851;
-}
-
-.filter__title {
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    padding: 0;
-    margin: 5px;
-}
-
-.date__filter {
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    padding: 0;
-    margin: 5px;
-}
-
-.hashtag__filter {
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    padding: 0;
-    margin: 5px;
-}
-
-.supplier__filter {
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    padding: 0;
-    margin: 5px;
-}
-
-.search__button {
-}
-
-
 
 .section__data {
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -129,162 +10,53 @@
     margin: 10% 0 15% 2%;
 }
 
-.post {
-    display: flex;
-    flex: 0 1 45%;
-    margin: 20px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    text-align: center;
-    border: black solid;
-    background-color: #f5f3e8;
-}
-
-.post__info {
-    display: flex;
-    flex: 0 1 100%;
-}
-
-.post__info__section {
-    display: flex;
-    flex: 0 1 40%;
-    justify-content: center;
-    flex-flow: column;
-    padding: 5px;
-
-}
-
-.post__text {
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    align-items: center;
-    align-content: center;
-    padding: 0;
-    flex: 0 1 60%;
-}
-.service__name{
-    background: #e9e8d4;
-    margin: 5%;
-}
-.grade {
-    background-color: #e9e8d4;
-}
-
-.validity__info {
-    display: flex;
-}
-
-.validity__info div {
-    display: flex;
-    margin: 5px;
-    background: #eaddc4;
-}
-.description{
-    background: #e9e8d4;
-}
-.post__info__hashtags {
-    display: flex;
-    flex: 0 0 auto;
-    justify-content: space-around;
-    width: 80%;
-}
-
-.hashtag{
-    width: 60%;
-    background: #d9cec0;
-
-}
-.sale{
-    width: 20%;
-    background: #bc9b74;
-}
-.grade img {
-    width: 25px;
-    height: 25px;
-}
-
-.review{
-    display: flex;
-    justify-content: center;
-}
-.review button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 5px;
-    width: 50%;
-    height: 50%;
-
-}
-.navigation{
+.navigation {
     display: flex;
     align-content: center;
     justify-content: center;
     width: 85%;
     margin-bottom: 10%;
 }
+
 .previous__page img {
     width: 25px;
     height: 25px;
 }
-.page{
+
+.page {
     width: 25px;
     height: 25px;
     text-align: center;
     line-height: 25px;
 }
+
 .next__page img {
     width: 25px;
     height: 25px;
 }
 
-.footer {
-    position: fixed;
-    width: 100%;
-    padding: 1%;
-    left: 0;
-    bottom: 0;
-    background: #6e7c44;
-}
-
-.footer__content {
-    display: flex;
-    justify-content: space-between;
-    flex: auto;
-    flex-grow: 1;
-    width: 85%;
-}
-
-.creator__info {
-    display: flex;
+.navigation__page__next {
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    align-content: center;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: large;
-    flex: 0 1 auto;
-    padding: 0;
-    margin: 0 2% 0 0;
+    width: 40px;
+    height: 40px;
 }
 
-.footer__site__name {
-    display: flex;
+.navigation__page__prev {
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    align-content: center;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: large;
-    flex: 0 1 auto;
-    padding: 0;
-    margin: 0 2% 0 0;
+    width: 40px;
+    height: 40px;
 }
 
-.mail__info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: large;
-    flex: 0 1 auto;
-    padding: 0;
-    margin: 0 2% 0 0;
-}
+
