--- a/task3/UI/css/header.css
+++ b/task3/UI/css/header.css
@@ -3,50 +3,50 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    flex: 0 1 auto;
-    flex-grow: 1;
+    flex: 1 1 auto;
     padding: 1%;
     left: 0;
     top: 0;
     z-index: 2;
-    background: #6e7c44;
+    color: #EDF1FF;
+    background: #301C66;
 }
 
-.header__site__name {
+.header-site-name {
     display: flex;
-    justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: large;
     flex: 0 1 auto;
     padding: 0;
-    margin: 0 2% 0 0;
+    margin: 0 2%;
 }
 
-.site__name {
+.site-name {
     top: 15px;
-    font-size: 120%;
+    font-size: x-large;
     font-family: Ravie, serif;
+
 }
 
-.header__user__info {
+.header-user-info {
+    color: #EDF1FF;
     display: flex;
-    justify-content: center;
     align-items: center;
     text-align: center;
     font-size: large;
     flex: 0 1 auto;
     padding: 0;
-    margin: 0 2% 0 0;
+    margin: 0 2%;
 }
 
-.user__img img {
+.user-img img {
     width: 70px;
     height: 70px;
 }
 
-.user__info {
+.user-info {
     display: flex;
+
     justify-content: center;
     flex-flow: column;
     align-items: center;
@@ -56,4 +56,11 @@
 
 .user-name {
     font-family: Candara, serif;
+}
+
+.login-button, .logout-button{
+    color: #000925;
+    background-color: #D5DEFB;
+    border-radius: 20px;
+    padding: 2px 12px;
 }
