--- a/UI/src/css/styles.css
+++ b/UI/src/css/styles.css
@@ -354,3 +354,14 @@
     padding: 0;
     margin: 0 2% 0 0;
 }
+
+.add-post {
+    display: flex;
+    position: fixed;
+    top: 15%;
+    left: 0;
+    background-color: #486f3f;
+    color: #EDF1FF;
+    border-radius: 20px;
+    padding: 2px 10px;
+}
