--- a/task3/UI/css/modal.css
+++ b/task3/UI/css/modal.css
@@ -91,7 +91,7 @@
     justify-content: center;
 }
 
-.log-button {
+.log-button .edit-modal-button {
     flex: 0 0 auto;
     align-self: center;
     margin: 15px;
@@ -99,4 +99,13 @@
     color: #EDF1FF;
     border-radius: 20px;
     padding: 2px 10px;
+}
+
+.edit-post {
+    display: flex;
+    flex: 0 0 100%;
+    flex-wrap: wrap;
+    text-align: center;
+    border-radius: 15px;
+    padding: 5px;
 }
