--- a/task8/src/main/webapp/resources/css/modal.css
+++ b/task8/src/main/webapp/resources/css/modal.css
@@ -75,7 +75,7 @@
     margin-top: 5%;
 }
 
-.sign-in-warning, .username-warning, .password-warning {
+.sign-in-warning, .username-warning, .password-warning, .file-warning {
     text-align: center;
     color: red;
     display: none;
@@ -89,6 +89,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
 }
 
 .log-button, .edit-modal-button {
